hphp/hack/test/typecheck/class_level_where_clauses/this_super/unrelated_implements.php
<?hh
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

final class MustFinal implements I {}

interface I where this super MustFinal {}

class D implements I {} // Error!
